--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -1,3 +1,25 @@
 {
-  "welcome": "Bienvenue"
+  "welcome": "Bienvenue",
+  "nav": {
+    "home": "Accueil",
+    "form": "Formulaire de contact"
+  },
+  "form": {
+    "title": "Formulaire de contact",
+    "description": "Remplissez le formulaire ci-dessous pour nous contacter",
+    "firstName": "Prénom",
+    "firstNamePlaceholder": "Entrez votre prénom",
+    "lastName": "Nom",
+    "lastNamePlaceholder": "Entrez votre nom",
+    "email": "Adresse e-mail",
+    "emailPlaceholder": "votre.email{'@'}exemple.com",
+    "message": "Message",
+    "messagePlaceholder": "Tapez votre message ici...",
+    "submit": "Envoyer le message",
+    "cancel": "Annuler",
+    "success": "Votre message a été envoyé avec succès !",
+    "error": "Une erreur s'est produite. Veuillez réessayer.",
+    "required": "Ce champ est requis",
+    "invalidEmail": "Veuillez entrer une adresse e-mail valide"
+  }
 }
