feat: add DpTabs component and enhance component library documentation
- Create reusable DpTabs component with full accessibility support
  - ARIA attributes (role, aria-selected, aria-controls)
  - Keyboard navigation support
  - Optional icon support via Nuxt Icon
  - v-model support for external state control
  - Independent state for multiple instances

- Refactor /composants page to use tabs for better organization
  - Add tabs system for Buttons, Modals, and Tabs sections
  - Separate Playground and Examples into tabs
  - Improve readability and navigation

- Add Tabs component to component library
  - Playground with live demo and copy button
  - Examples (basic tabs, tabs with icons)
  - Features list documentation

- Enhance component documentation
  - Add Features section for Buttons component
  - Add Features section for Modals component
  - Add Features section for Tabs component
  - Add copy button for Tabs code example

- Update i18n translations
  - Add English and French translations for Tabs section

- Update E2E tests
  - Modify existing tests to work with tabs navigation
  - Add new tests for tabs functionality
  - Add tests for tabs component section
  - All 15 tests passing

This creates a more organized and professional component library
with consistent documentation patterns across all components.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -11,7 +11,9 @@
     "buttons": "Buttons",
     "buttonsDesc": "Button component with multiple variants and sizes",
     "modals": "Modals",
-    "modalsDesc": "Modal dialogs for displaying content"
+    "modalsDesc": "Modal dialogs for displaying content",
+    "tabs": "Tabs",
+    "tabsDesc": "Accessible tab navigation component with icon support"
   },
   "form": {
     "title": "Contact Form",
