feat: add i18n and visual feedback for copy buttons
Enhanced the copy functionality across the component library with full
internationalization support and instant visual feedback.

Changes:
- Added i18n translations for copy buttons:
  - English: "Copy" / "Copied!"
  - French: "Copier" / "Copié !"

- Added visual feedback with tooltips and icon changes:
  - Shows "Copy" / "Copier" initially with copy icon
  - Changes to "Copied!" / "Copié !" with check icon for 2 seconds
  - Wrapped buttons in DpTooltip for better UX

- Updated copy button states:
  - Added copiedTabs and copiedTooltip refs
  - Auto-reset feedback after 2 seconds
  - Dynamic icon switching (lucide:copy ↔ lucide:check)

- Removed redundant <template> tags from code examples:
  - Tabs code example
  - Tooltip code example
  - Code is more concise for Nuxt template context

All 17 E2E tests passing ✓

The copy buttons now provide clear, localized feedback when code is copied
to the clipboard, improving the developer experience.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -15,7 +15,9 @@
     "tabs": "Tabs",
     "tabsDesc": "Accessible tab navigation component with icon support",
     "tooltips": "Tooltips",
-    "tooltipsDesc": "Contextual information on hover or focus with flexible positioning"
+    "tooltipsDesc": "Contextual information on hover or focus with flexible positioning",
+    "copy": "Copy",
+    "copied": "Copied!"
   },
   "form": {
     "title": "Contact Form",
