rebrand: update branding to Business Operations Framework
- Update brand name and tagline in theme config
- Update translations (EN/FR) to remove technical stack mentions
- Update page metadata to focus on business value
- Update documentation to emphasize business benefits
- Update test assertions for new brand name

Key changes:
- Brand name: "Dashboard Pro" → "Business Operations Framework"
- Tagline: "Professional Nuxt Dashboard Template" → "Business Operations Platform for Modern Teams"
- Remove all Nuxt/Vue/TypeScript mentions from user-facing text
- Focus messaging on business value instead of technical details

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -44,8 +44,8 @@
     "invalidEmail": "Please enter a valid email address"
   },
   "pricing": {
-    "title": "Dashboard Pro Pricing",
-    "subtitle": "Professional Nuxt dashboard template built with Nuxt 4, Vue 3, and TypeScript. Choose the right plan for your needs.",
+    "title": "Business Operations Framework Pricing",
+    "subtitle": "Business Operations Platform for Modern Teams. Choose the right plan for your needs.",
     "period": "one-time",
     "popularBadge": "Recommended",
     "footer": "All licenses include lifetime updates and full source code access.",
